# Prefilter-AI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/amazon/: data_generation.py  data_generation_sdk.py  evaluation.py
examples/: basic_usage.py  demo_app.py  prefilter_ai_colab.ipynb
examples/ecommerce/: ecommerce_hybrid_search.ipynb  search.py
prefilter_ai/: __init__.py  config.py  evaluation.py  exceptions.py  expert.py  history.py  ir.py  loader.py  ontology.py  parser.py  parser_interface.py  pipeline.py  registry.py  relaxer.py  result.py  spacy_extractor.py  utils.py  validator.py
prefilter_ai/connectors/: __init__.py  base.py  chromadb.py  elasticsearch.py  mongodb.py  sql.py
prefilter_ai/translators/: base.py  chromadb.py  elasticsearch.py  mongodb.py  sql.py
prefilter_platform/: README.md  __init__.py  server.py
prefilter_platform/dashboard/: app.js  index.html  style.css
scripts/: upload_adapter.py
tests/: __init__.py  test_connectors.py  test_pipeline.py  test_prefilter_ai.py
training/: evaluate.py
